[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Gui.gd" type="Script" id=1]

[node name="Gui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Status" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( -99, -430 )
text = "WAITING FOR CONNECTION TO PEER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( -99, -430 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Align" type="VBoxContainer" parent="Menu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -53.5
margin_right = 150.0
margin_bottom = 53.5
size_flags_vertical = 9
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Menu/Align"]
margin_right = 300.0
margin_bottom = 77.0
custom_constants/vseparation = 7
columns = 2

[node name="lblAddress" type="Label" parent="Menu/Align/Grid"]
margin_right = 148.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtAddress" type="TextEdit" parent="Menu/Align/Grid"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFrameDelay" type="Label" parent="Menu/Align/Grid"]
margin_top = 21.0
margin_right = 148.0
margin_bottom = 35.0
text = "Frame Delay:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtFrameDelay" type="TextEdit" parent="Menu/Align/Grid"]
margin_left = 152.0
margin_top = 21.0
margin_right = 300.0
margin_bottom = 35.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblRollback" type="Label" parent="Menu/Align/Grid"]
margin_top = 42.0
margin_right = 148.0
margin_bottom = 56.0
text = "Rollback Frames:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtRollback" type="TextEdit" parent="Menu/Align/Grid"]
margin_left = 152.0
margin_top = 42.0
margin_right = 300.0
margin_bottom = 56.0
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblDupRange" type="Label" parent="Menu/Align/Grid"]
margin_top = 63.0
margin_right = 148.0
margin_bottom = 77.0
text = "Dup Send Range:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtDupRange" type="TextEdit" parent="Menu/Align/Grid"]
margin_left = 152.0
margin_top = 63.0
margin_right = 300.0
margin_bottom = 77.0
text = "16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="Button" parent="Menu/Align"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 104.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Align/btnPlay" to="." method="_on_play_pressed"]
